--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,5 +8,5 @@ html {
 }
 
 .custom-img {
-  background-image: url('https://ludumobucket.s3.eu-central-1.amazonaws.com/Sundry+pics/Knysna1.jpg')
+  background-image: url('https://ludumobucket.s3.eu-central-1.amazonaws.com/Trail+Huts/1.jpg')
 }
