--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,10 @@
 html {
   scroll-behavior: smooth;
   font-family: 'Roboto', sans-serif;
+  background-color: #f5f9f2;
 }
 
 .custom-img {
   background-image: url('https://ludumobucket.s3.eu-central-1.amazonaws.com/Trail+Huts/1.jpg')
 }
+
